--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Editorial by HTML5 UP</title>
+		<title>Texas Rotaract</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -25,13 +25,11 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+                                    <a href="index.html" class="logo"><strong>Texas Rotaract</strong></a>
 									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-medium"><span class="label">Medium</span></a></li>
+										<li><a href="https://www.facebook.com/TexasRotaract/" class="icon fa-facebook"><span class="label">Twitter</span></a></li>
+										<li><a href="https://twitter.com/TXRotaract" class="icon fa-twitter"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.instagram.com/txrotaract/" class="icon fa-instagram"><span class="label">Snapchat</span></a></li>
 									</ul>
 								</header>
 
