what we do section

--- a/index.html
+++ b/index.html
@@ -53,35 +53,28 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Erat lacinia</h2>
+										<h2>What We Do</h2>
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-diamond"></span>
+											<span class="icon fa-heart"></span>
 											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon fa-paper-plane"></span>
-											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon fa-rocket"></span>
-											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Service</h3>
+												<p>We have regular voluntter opportunities and fundraising projects helping a variety of causes that are both fun and rewarding.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon fa-signal"></span>
 											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Professional Development</h3>
+												<p>We have networking opportunities with professionals in different industries as well as leadership opportunities and career preparation events.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon fa-users"></span>
+											<div class="content">
+												<h3>Social</h3>
+												<p>We are a fun-loving group that values social events as well. You'll definetely make new friends in Rotaract!</p>
 											</div>
 										</article>
 									</div>
