--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 								<header id="header">
                                     <a href="index.html" class="logo"><strong>Texas Rotaract</strong></a>
 									<ul class="icons">
-										<li><a href="https://www.facebook.com/TexasRotaract/" class="icon fa-facebook"><span class="label">Twitter</span></a></li>
-										<li><a href="https://twitter.com/TXRotaract" class="icon fa-twitter"><span class="label">Facebook</span></a></li>
-										<li><a href="https://www.instagram.com/txrotaract/" class="icon fa-instagram"><span class="label">Snapchat</span></a></li>
+										<li><a href="https://www.facebook.com/TexasRotaract/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://twitter.com/TXRotaract" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://www.instagram.com/txrotaract/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
 								</header>
 
@@ -133,8 +133,8 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="generic.html">About</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li>
 											<span class="opener">Submenu</span>
