added benefits section

--- a/about.html
+++ b/about.html
@@ -55,8 +55,16 @@
 									<hr class="major" />
 
 									<h2>Benefits</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+                                    <p><b>By becoming a member of Texas Rotaract, you can:</b></p>
+									
+                                    <ul>
+                                        <li>Be a part of positive change in your community.</li>
+                                        <li>Help raise money for worthwhile causes around the world.</li>
+                                        <li>Network with Rotarians who are professionals in many different fields.</li>
+                                        <li>Make friends and have fun in various social events.</li>
+                                        <li>Take advantage of officer position opportunities to gain leadership skills and build your resume.</li>
+                                        <li>Save money on travel, hotels, and supplies with Rotary's member benefits program, Rotary Global Rewards.</li>
+                                    </ul>
 
 									<hr class="major" />
 
