--- a/about.html
+++ b/about.html
@@ -97,9 +97,9 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="about.html">About</a></li>
+										<li><a href="getinvolved.html">Get Involved</a></li>
 										<li>
 											<span class="opener">Submenu</span>
 											<ul>
