--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Home</a></li>
-										<li><a href="generic.html">About</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="about.html">About</a></li>
+										<li><a href="getinvolved.html">Get Involved</a></li>
 										<li>
 											<span class="opener">Submenu</span>
 											<ul>
