finished get involved sections

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -49,14 +49,20 @@
                                             <p>If you decide to join us, we have a membership fee of $10. We take Venmo, cash, or card. Just catch our Vice President during a meeting!</p>
                                         </div>
                                         <div class="4u 12u$(medium)">
-                                            <h3>Faucibus consequat lorem</h3>
-                                            <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit.</p>
+                                            <h3>Social Media</h3>
+                                            <span class="image fit"><img src="images/socialmedia.jpg" alt="" /></span>
+                                            <p>Follow us on social media to keep up to date on our meetings, service events, and other Rotary news!</p>
+                                            <p>Facebook Page:  <a href="https://www.facebook.com/TexasRotaract/">Texas Rotaract</a></p>
+                                            <p>Twitter:  <a href="https://twitter.com/TXRotaract">@TXRotaract</a></p>
+                                            <p>Instagram: <a href="https://www.instagram.com/txrotaract/">@TXRotaract</a></p>
                                         </div>
                                         <div class="4u$ 12u$(medium)">
-                                            <h3>Accumsan montes viverra</h3>
-                                            <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit.</p>
+                                            <h3>Newsletter</h3>
+                                            <span class="image fit"><img src="images/newsletter.jpg" alt="" /></span>
+                                            <p>If you can't make our meetings or have an inquiry, another great way to get in contact with us is to sign up to our newsletter! All you have to do is email us at <b>rotaractatut@gmail.com</b> and say you want to be added to our mailing list. We promise not to spam you with emails.</p>
                                         </div>
                                     </div>
+									<hr class="major" />
 
 								</section>
 
