added officer images

--- a/officers.html
+++ b/officers.html
@@ -41,7 +41,7 @@
 
 									<div class="row">
 											<div class="6u 12u$(small)">
-                                                <p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>
+                                                <p><span class="image left"><img src="images/icela.jpg" style="border-radius: 50%" alt="Icela Lee" /></span>
                                                     <b>President<br/>Icela Lee</b>
                                                     <br/>
                                                     Major: Economics
@@ -52,7 +52,7 @@
                                                 </p>
                                             </div>
                                             <div class="6u 12u$(small)">
-                                                <p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>
+                                                <p><span class="image left"><img src="images/caitlin.jpg" style="border-radius: 50%" alt="Caitlin Boggs" /></span>
                                                     <b>Vice President<br/>Caitlin Boggs</b>
                                                     <br/>
                                                     Major: Biochemistry Pre-med
@@ -66,7 +66,7 @@
                                     
                                     <div class="row">
 											<div class="6u 12u$(small)">
-                                                <p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>
+                                                <p><span class="image left"><img src="images/phea.jpg" style="border-radius: 50%" alt="Sedamasophea Sen" /></span>
                                                     <b>Project Officer<br/>Sedamasophea Sen</b>
                                                     <br/>
                                                     Major: Mathematics
@@ -75,7 +75,7 @@
                                                 </p>
                                             </div>
                                             <div class="6u 12u$(small)">
-                                                <p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>
+                                                <p><span class="image left"><img src="images/veronica.jpg" style="border-radius: 50%" alt="Veronica Kocik" /></span>
                                                     <b>Professional Development Officer<br/>Veronica Kocik</b>
                                                     <br/>
                                                     Major: English
@@ -89,7 +89,7 @@
                                     
                                     <div class="row">
 											<div class="6u 12u$(small)">
-                                                <p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>
+                                                <p><span class="image left"><img src="images/lynnze.jpg" style="border-radius: 50%" alt="Lynnze" /></span>
                                                     <b>Marketing and Membership Development Officer<br/>Lynnze Sprowls</b>
                                                     <br/>
                                                     Major: Undeclared
@@ -98,7 +98,7 @@
                                                 </p>
                                             </div>
                                             <div class="6u 12u$(small)">
-                                                <p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>
+                                                <p><span class="image left"><img src="images/placeholder.jpg" style="border-radius: 50%" alt="Service Officer" /></span>
                                                     <b>Service Officer<br/>TBD</b>
                                                     <br/>
                                                     We will be choosing a Service Officer at the beginning of the Fall 2018 semester!
@@ -121,22 +121,6 @@
                                     </div>
 
 									<hr class="major" />
-
-									<h2>Interdum sed dapibus</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Magna etiam veroeros</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Lorem aliquam bibendum</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
 
 								</section>
 
