--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
 										<li><a href="about.html">About</a></li>
 										<li><a href="getinvolved.html">Get Involved</a></li>
 										<li><a href="officers.html">Officers</a></li>
-										<li><a href="#">Etiam Dolore</a></li>
+										<li><a href="calendar.html">Calendar</a></li>
 										<li><a href="#">Adipiscing</a></li>
 										<li>
 											<span class="opener">Another Submenu</span>
