--- a/calendar.html
+++ b/calendar.html
@@ -37,7 +37,7 @@
 								<section>
 
                                     <iframe src="https://calendar.google.com/calendar/embed?src=67smfo6ie870b8j1tdjkbnl7tc%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="100%" height="800" frameborder="0" scrolling="no"></iframe>
-
+                                    <hr class="major" />
 								</section>
 
 						</div>
