--- a/calendar.html
+++ b/calendar.html
@@ -60,19 +60,11 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
-										<li>
-											<span class="opener">Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Etiam Dolore</a></li>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="about.html">About</a></li>
+										<li><a href="getinvolved.html">Get Involved</a></li>
+										<li><a href="officers.html">Officers</a></li>
+										<li><a href="calendar.html">Calendar</a></li>
 										<li><a href="#">Adipiscing</a></li>
 										<li>
 											<span class="opener">Another Submenu</span>
