--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										</header>
 										<p>Texas Rotaract is The University of Texas at Austin's branch of Rotary International.</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="about.html" class="button big">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image object">
