took links out of causes

--- a/index.html
+++ b/index.html
@@ -87,27 +87,27 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/promotingpeace.jpg" alt="Promoting Peace" /></a>
+                                            <a class="image"><img src="images/promotingpeace.jpg" alt="Promoting Peace" /></a>
 											<h3>Promoting Peace</h3>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/fightingdisease.jpg" alt="Fighting Disease" /></a>
+											<a class="image"><img src="images/fightingdisease.jpg" alt="Fighting Disease" /></a>
 											<h3>Fighting Disease</h3>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/sanitation.jpg" alt="Providing Clean Water, Sanitation, and Hygiene" /></a>
+											<a class="image"><img src="images/sanitation.jpg" alt="Providing Clean Water, Sanitation, and Hygiene" /></a>
 											<h3>Providing Clean Water, Sanitation, and Hygiene</h3>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/mothersandchildren.jpg" alt="Saving Mothers and Children" /></a>
+											<a class="image"><img src="images/mothersandchildren.jpg" alt="Saving Mothers and Children" /></a>
 											<h3>Saving Mothers and Children</h3>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/education.JPG" alt="Supporting Education" /></a>
+											<a class="image"><img src="images/education.JPG" alt="Supporting Education" /></a>
 											<h3>Supporting Education</h3>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/localeconomies.jpg" alt="Growing Local Economies" /></a>
+											<a class="image"><img src="images/localeconomies.jpg" alt="Growing Local Economies" /></a>
 											<h3>Growing Local Economies</h3>
 										</article>
 									</div>
