deleted uneeded menu items

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -59,7 +59,7 @@
                                         <div class="4u$ 12u$(medium)">
                                             <h3>Newsletter</h3>
                                             <span class="image fit"><img src="images/newsletter.jpg" alt="" /></span>
-                                            <p>If you can't make our meetings or have an inquiry, another great way to get in contact with us is to sign up to our newsletter! All you have to do is email us at <b>rotaractatut@gmail.com</b> and say you want to be added to our mailing list. We promise not to spam you with emails.</p>
+                                            <p>If you can't make our meetings or have an inquiry, another great way to get in contact with us is to sign up to our newsletter! All you have to do is email us at <a href="mailto:rotaractatut@gmail.com">rotaractatut@gmail.com</a> and say you want to be added to our mailing list. We promise not to spam you with emails.</p>
                                         </div>
                                     </div>
 									<hr class="major" />
@@ -84,19 +84,6 @@
 										<li><a href="getinvolved.html">Get Involved</a></li>
 										<li><a href="officers.html">Officers</a></li>
 										<li><a href="calendar.html">Calendar</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
 									</ul>
 								</nav>
 
