--- a/getinvolved.html
+++ b/getinvolved.html
@@ -86,6 +86,8 @@
 										<li><a href="calendar.html">Calendar</a></li>
 									</ul>
 								</nav>
+                            
+                            <a class="image"><img src="images/fourwaytest.jpg" style="width: 275px" alt="The Four Way Test" /></a>
 
 							<!-- Section -->
 								<section>
