changed hover colors

--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-heart"></span>
+											<span class="icon fa-heart" style="color:#FFAF3F"></span>
 											<div class="content">
 												<h3>Service</h3>
 												<p>We have regular voluntter opportunities and fundraising projects helping a variety of causes that are both fun and rewarding.</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon fa-signal"></span>
+											<span class="icon fa-signal" style="color:#FFAF3F"></span>
 											<div class="content">
 												<h3>Professional Development</h3>
 												<p>We have networking opportunities with professionals in different industries as well as leadership opportunities and career preparation events.</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon fa-users"></span>
+											<span class="icon fa-users" style="color:#FFAF3F"></span>
 											<div class="content">
 												<h3>Social</h3>
 												<p>We are a fun-loving group that values social events as well. You'll definetely make new friends in Rotaract!</p>
