removed action from sidebar image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/arborday.JPG" style="transform: rotate(180deg)">
+                                        <img src="images/arborday.JPG" style="transform: rotate(180deg)">
 									</span>
 								</section>
 
@@ -135,7 +135,7 @@
 									</ul>
 								</nav>
                             
-                            <a class="image"><img src="images/fourwaytest.jpg" style="width: 275px" alt="The Four Way Test" /></a>
+                            <img src="images/fourwaytest.jpg" style="width: 275px; border-radius: 5px" alt="The Four Way Test" />
 
 							<!-- Section -->
 								<section>
